Use fastCSV lib to read files